# Study_MIPT

./: CMakeLists.txt  CVector.cpp  CVector.h  Complex.cpp  Complex.h  LinkedList.h  Vector3D.cpp  Vector3D.h  main.cpp
Lab2/: lab2.h
Lab3/: LinkedList.h  Poland.h
Lab4/: Vector3D.cpp  Vector3D.h
Lab5/: Tree.h  TreeNode.h
Lab6/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
Lab7/: CVector.h
