cmake_minimum_required(VERSION 3.24)
project(Study)

set(CMAKE_CXX_STANDARD 17)

add_executable(Study main.cpp Complex.h Lab3/LinkedList.h Complex.cpp Lab4/Vector3D.cpp Lab4/Vector3D.h Lab7/CVector.h Lab2/lab2.h Lab6/Shape.cpp Lab6/Shape.h Lab6/Triangle.cpp Lab6/Triangle.h Lab6/Rectangle.cpp Lab6/Rectangle.h Lab6/Circle.cpp Lab6/Circle.h Lab3/Poland.h Lab5/TreeNode.h Lab5/Tree.h)
